--- a/script_make_cv.Rmd
+++ b/script_make_cv.Rmd
@@ -1,7 +1,7 @@
 ---
-name: Guy Frederick Sutton
+name: Guy Frederick Sutton (PhD)
 # surname: Curie
-position: "Ph.D. Candidate"
+position: "Research Entomologist"
 address: "Center for Biological Control, Rhodes University, South Africa"
 phone: "(+27)825524643"
 # Add website with code below
@@ -50,7 +50,7 @@ baretable <- function(tbl, digits = 0,
 
 &nbsp;    
 
-I am a Research Entomologist currently based at the Center for Biological Control at Rhodes University in South Africa. My research combines extensive fieldwork, with laboratory experiments and statistical models to develop, implement and evaluate practical management options for controlling invasive alien plants, primarily using insects and fungal pathogens as biological control agents. 
+I am a Research Entomologist currently based at the Center for Biological Control at Rhodes University in South Africa. My research combines fieldwork, laboratory experiments and statistical models to develop, implement and evaluate practical management options for controlling invasive alien plants, primarily using insects and fungal pathogens as biological control agents. 
 
 &nbsp;
 
@@ -94,10 +94,19 @@ tribble(
 
 # PEER-REVIEWED PUBLICATIONS
 &nbsp;  
-9\. Chikowore, G., Mutamiswa, R., Martin, G.D., **Sutton, G.F.**, Chidawanyika, F. (2021). Reduction of grazing index in high elevation grasslands following  Black locust  invasion in  South Africa. *Rangeland Ecology and Management*. **In press**. 
+12\. **Sutton, G.F.**, Bownes, A., Visser, V., Mapaura, A., & Canavan, K. (2021). Progress and prospects for the biological control of invasive alien grasses (Poaceae) in South Africa. *African Entomology*. **Accepted**. 
+&nbsp;    
+&nbsp;   
+11. Olckers, T., Egli, D., Martin, G.D., Paterson, I.D., **Sutton, G.F.**, & Wood, A.R. (2021). Biological control of South African plants that are invasive elsewhere in the world. *African Entomology*. **Accepted**. 
+&nbsp;    
+&nbsp;   
+10\. Canavan, K., Hill, M.P., Ivey, P., **Sutton, G.F.**, Paterson, I.D. (2021). Prioritisation of targets for weed biological control III: A tool to identify the next targets for biological control in South Africa and set priorities for resource allocation. *Biocontrol Science and Technology* 31: 584-601. 
 &nbsp;    
 &nbsp;  
-8\. **Sutton, G.F.**, Canavan, K., Day, M.D., & Paterson, I.D. (2021). Field-based ecological studies to assess prospective biological control agents for invasive alien plants: an example from giant rat's tail grass. *Journal of Applied Ecology*. **In press**. [\underline{PDF}](https://besjournals.onlinelibrary.wiley.com/doi/10.1111/1365-2664.13834) 
+9\. Chikowore, G., Mutamiswa, R., Martin, G.D., **Sutton, G.F.**, & Chidawanyika, F. (2021). Reduction of grazing index in high elevation grasslands following  Black locust  invasion in  South Africa. *Rangeland Ecology and Management* 76: 109-117. 
+&nbsp;    
+&nbsp;  
+8\. **Sutton, G.F.**, Canavan, K., Day, M.D., & Paterson, I.D. (2021). Field-based ecological studies to assess prospective biological control agents for invasive alien plants: an example from giant rat's tail grass. *Journal of Applied Ecology* 58: 1043-1054. [\underline{PDF}](https://besjournals.onlinelibrary.wiley.com/doi/10.1111/1365-2664.13834) 
 &nbsp;    
 &nbsp;  
 7\. Martin, G.D., Magengelele, N.L., Paterson, I.D., **Sutton, G.F.** (2020). Climate modelling suggests a review of the legal status of Brazilian pepper *Schinus terebinthifolia* in South Africa is required. *South African Journal of Botany* 132: 95-102. [\underline{PDF}](https://https://www.sciencedirect.com/science/article/abs/pii/S025462992030123X) 
@@ -140,6 +149,12 @@ Kurose, D., Muller-Scharer, H., Rafter, M., Schaffner, U., Seier, M., Sforza, R.
 
 &nbsp;
 
+10\. **Sutton, G.F.**, van Steenderen, C., Canavan, K., Yell, L., & Paterson, I.D. (2021). South Africa is a hotspot for previously unknown stem-boring wasps of grasses (Tetramesa; Eurytomidae). *56th Annual Congress of the Grassland Society of Southern Africa*, 27-29 July 2021, Online Event. (*Presented*).
+&nbsp;    
+&nbsp;    
+9\. **Sutton, G.F.**, Canavan, K., & Paterson, I.D. (2021). Anthropogenic disturbance reduces the prevalence and abundance of specialist, but not generalist, grass-associated insects across South Africa: implications for biological control. *22nd Congress of the Entomological Society of Southern Africa*, 28th June - 1st July 2021, Online Event. (*Presented*).
+&nbsp;    
+&nbsp;    
 8\. **Sutton, G.F.**, Canavan, K., Visser, V., & Paterson, I.D. (2020). Invasive grasses as suitable biological control targets: a South African perspective. *46th South African Association of Botanists Annual Conference*, 8-10th Janaury 2020, Qwa-Qwa, South Africa. (*Presented*).
 &nbsp;    
 &nbsp;  
@@ -164,6 +179,44 @@ Kurose, D., Muller-Scharer, H., Rafter, M., Schaffner, U., Seier, M., Sforza, R.
 1\. **Sutton, G.F.**, Timm, A.E., & Paterson, I.D. (2015). Determination of the origin of two invasive populations of African Tulip Tree using ISSR and AFLP molecular markers. *XIX Congress of the Entomological Society of Southern Africa*, Rhodes University, Grahamstown, South Africa. (*Presented*). 
 
 &nbsp;
+
+# Other Scientific Outputs
+
+## (1) Release applications for biological control agents
+
+My research has resulted in the release of biological control agents for the control of invasive alien plants. The releases of biological control agents are my most significant scientific outputs and each released agent is the culmination of many years of work. The applications are reviewed by panels of experts who then advise government as to whether a change to the national invasive species regulations (Conservation of Agricultural Resources Act of 1983) should be made so that a biological control agent can be released. If successful, permission is then granted by the Department of Agriculture, Land Reform and Rural Development (DALRRD) and Department of Environment, Forestry and Fisheries (DEFF).
+
+- Paterson, I.D., **Sutton, G.F.**, Muskett, P.C., Paynter, Q. (2019). Application for the release of *Paradibolia coerulea* (Chrysomelidae) for the control of *Spathodea campanulata* (Bignoniaceae) in the Cook Islands. *Submitted to Cook Islands Ministry of Agriculture March 2019, and the application was accepted August 2019*.
+
+&nbsp;
+
+# Community Engagement
+
+## (1) Public Seminars
+
+1\. **Sutton, G.F.** (2021). Invasive alien species in urban gardens - regulations and management. *Port Alfred Gardeners Society*, Port Alfred, South Africa. (*6 April 2021*). 
+
+&nbsp;
+
+## (2) OUTREACH
+
+&nbsp;
+
+**Mentor**,  \hfill 2015, 2017
+&nbsp;  
+*Entomological Society of Southern Africa Student Outreach Programme*
+&nbsp;    
+
+> * Assisted in laboratory set-up, specimen collection and preservation, and practical demonstrations of several aspects of entomology to local Grahamstown school groups
+
+**Student Assistant**, \hfill 2015, 2016
+&nbsp;  
+*Rhodes University, WILDreach Society*
+&nbsp;    
+
+> * Aided in specimen collection, curation and preservation techniques, and practical demonstrations and explanations of general aspects of entomology and undergraduate biology to local school groups  
+
+&nbsp;    
 
 # TEACHING EXPERIENCE
 
@@ -306,13 +359,20 @@ range of Monte Carlo simulations and bootstrap resampling procedures to aid samp
 
 &nbsp;
 
-# PROFESSIONAL SERVICE
+# PROFESSIONAL SERVICE AND INVOLVEMENT
 
 &nbsp;
 
-## Journal Reviewer (n = 8 papers)
+## (9) Review for peer-reviewed journals (n = 9 papers)
 
-Biological Invasions (2 papers), BioControl (1 paper), Biocontrol Science and Technology (1 paper), Plant Ecology (1 paper), The Rangeland Journal (1 paper), South African Journal of Botany (1 paper), Environmental Monitoring and Assessment (1 paper)
+- Biological Invasions (2 papers) 
+- Biological Control (1 paper)
+- BioControl (1 paper) 
+- Biocontrol Science and Technology (1 paper), 
+- Plant Ecology (1 paper) 
+- The Rangeland Journal (1 paper)
+- South African Journal of Botany (1 paper)
+- Environmental Monitoring and Assessment (1 paper)
 
 &nbsp; 
 
@@ -344,26 +404,6 @@ Biological Invasions (2 papers), BioControl (1 paper), Biocontrol Science and Te
 
 &nbsp;  
 
-# OUTREACH
-
-&nbsp;
-
-**Mentor**,  \hfill 2015, 2017
-&nbsp;  
-*Entomological Society of Southern Africa Student Outreach Programme*
-&nbsp;    
-
-> * Assisted in laboratory set-up, specimen collection and preservation, and practical demonstrations of several aspects of entomology to local Grahamstown school groups
-
-**Student Assistant**, \hfill 2015, 2016
-&nbsp;  
-*Rhodes University, WILDreach Society*
-&nbsp;    
-
-> * Aided in specimen collection, curation and preservation techniques, and practical demonstrations and explanations of general aspects of entomology and undergraduate biology to local school groups    
-
-&nbsp; 
-
 # SKILLS
 
 &nbsp; 
@@ -373,6 +413,28 @@ Biological Invasions (2 papers), BioControl (1 paper), Biocontrol Science and Te
 &nbsp;  
 
 *Language*: English (fluent)
+
+&nbsp;  
+
+# LEADERSHIP MANAGEMENT AND ADMINISTRATION
+
+&nbsp; 
+
+## (10) Leadership 
+
+&nbsp;  
+
+3. Invited member of the scientific committee for the 45th National Symposium on Biological Invasions. 12th-17th July, 2015.  \hfill 2021 
+
+&nbsp;  
+
+2. Member of the Alien Grass Working Group of South Africa. \hfill 2017-present  
+&nbsp;  
+> This is a professional working group that directly advises government on policies and practices for the management of invasive alien grasses in Southern Africa.
+
+&nbsp;  
+
+1. Member of the Entomological Society of South Africa. \hfill 2014-present
 
 &nbsp;  
 
